--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
+  "proxy": "http://chat.finetunedfunctions.com",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
